--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "xinput wrapper. Access xinput based controllers.",
   "main": "index.js",
   "scripts": {
-    "configure": "node-gyp configure",
-    "build": "node-gyp build"
+    "install": "prebuild-install --verbose || node-gyp rebuild",
+    "prebuild": "prebuild --force --strip --verbose",
+    "test": "mocha --require coffeescript/register --grep Module test/*",
+    "full-test": "mocha --require coffeescript/register test/*",
+    "valgrind": "coffee -c test/usb.coffee; valgrind --leak-check=full --show-possibly-lost=no node --expose-gc --trace-gc node_modules/mocha/bin/_mocha -R spec"
   },
   "author": "davenonymous",
   "license": "MIT",
